The security fix seems to break cgo-builds in macOS.
See:
 - https://github.com/golang/go/issues/23672#issuecomment-364003264
 - https://travis-ci.org/coyim/coyim/jobs/338900291

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ matrix:
   include:
     - go: 1.8.7
       os: osx
+      env: CGO_CFLAGS_ALLOW="-Wl,-framework"
     - go: 1.9.4
       os: osx
+      env: CGO_CFLAGS_ALLOW="-Wl,-framework"
     - go: 1.7.6
       env: RELEASE=true
       os: linux
